# evoldeeds

./: .gitignore  README.md  REST.txt  TESTS.txt  approx.py  cigartree.js  cigartree.py  debug_rk4.py  h20.js  h20.py  jest.config.mjs  km03.js  lg08prep.json  likelihood.js  likelihood.py  package-lock.json  package.json  prepapprox.py  testapprox.js  testcigar.js  testcigar.py  tree.nh
aws/: Makefile  evoldeeds-api.js  postHistory.js
aws/api/: evoldeeds-api.js  evoldeeds-crud.js
aws/scripts/: createFamily.js  deleteFamily.js  postHistory.js
cpp/: README.md  calcscore.cpp  paramcigar.json
data/: align.cigartree.json  align.fa  align.seqcigartree.json  gp120.unaligned.fa  lg08evol.json  lg08hist.json  lg08prep.json  lg08tkf92.json  paramcigar.json  tiny.cigartree.json  tiny.fa
data/scripts/: fetch_treefam.py
frontend-client/: package-lock.json
frontend-client/src/: authService.ts  config.json
js/: cigartree.js  km03.js  likelihood.js  mathutil.js  pairalign.ts  testapprox.js  testcigar.js  tkf92.js  validator.js
js/__tests__/: pairalign.test.ts  test_data.json
js/scripts/: README.md  calcscore.js  hist2evol.js  makecigar.js  makecigar.ts  rollcigar.js  testapprox.js  testcigar.js  (+1 more)
lambda/: Makefile  createFamily.js  evoldeeds-crud.js  evoldeeds-crud.lambda  postHistory.js
python/: DEBUG.txt  TIMING.txt  approx.py  bounded_while_loop.py  cherry.py  cigartree.py  ctbn.py  ctbn_test.py  dataset.py  h20.py  km03.py  likelihood.py  optimize.py  pairhmm.py  prepapprox.py  pyproject.toml  testcigar.py  traincigar.py
rust/: Cargo.toml  README.md
(+1 files in other folders)
