[project]
name = "evoldeeds"
version = "1.0.0"
dependencies = [
    "jax >= 0.4.28",
    "diffrax >= 0.5.1",
    "optax >= 0.0.9",
    "numpy >= 1.19.5",
    "scipy >= 1.5.4",
    "natsort >= 8.4.0",
    "jsonargparse >= 4.27.0",
    "jsonnet >= 0.20.0",
    "einops >= 0.7.0",
    "tensorflow-probability >= 0.24.0",
    "tqdm >= 4.66.2",
]%            